SERVER-53198 Tenant oplog applier should commit the no-op writes.